# Mulit-Model-router

./: .env  .gitignore  Dockerfile  README.md  diagnose_startup.py  docker-compose.yml  load_env.py  main.py  pyproject.toml  requirements.txt  set_api_key.sh  test_end_to_end.sh  test_openai.py  test_simple_api.py  verify_key.py
data/configs/: models.yaml
data/modelData/: claude3-sonnet-guide.md  codellama13b-guide.md  finetuning_training_data.jsonl  gpt35-turbo-guide.md  gpt4-turbo-guide.md  llama3-8b-guide.md
data/model_docs/: claude-3-sonnet.md  codellama-13b.md  gpt-3.5-turbo.md  gpt-4-turbo.md  llama3-8b.md
examples/: demo.py
frontend/: README.md  test-standalone.html
frontend/public/: index.html
frontend/public/css/: components.css  styles.css
frontend/public/js/: api.js  app.js  ui.js
frontend/server/: index.js  package.json
scripts/: setup.sh
src/: __init__.py
src/api/: __init__.py  routes.py  server.py
src/integrations/: __init__.py  anthropic_integration.py  base_model.py  model_factory.py  ollama_integration.py  openai_integration.py
src/models/: __init__.py  model_config.py  prompt.py  routing.py
src/monitoring/: __init__.py  logging_config.py  metrics.py
src/rag/: __init__.py  document_loader.py  embedding_service.py  knowledge_base.py
src/routing/: __init__.py  model_selector.py  prompt_analyzer.py  routing_engine.py
tests/: __init__.py  test_prompt_analyzer.py
